# hackathon404

./: .gitignore  Cargo.toml  LICENSE  README.md
app/: index.html  package-lock.json  package.json
app/src/: App.css  App.tsx  Desktop.tsx  main.tsx
app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: filter.js  lib.rs
app/src/components/: App.tsx  AppShell.tsx  PageLayout.tsx
app/src/pages/: Calculadora.tsx  Facebook.tsx  Instagram.tsx  Navegador.tsx  Notas.tsx
browser/: Cargo.toml
browser/src/: camoufox.rs  main.rs
classifier/: .env.example  main.py  pyproject.toml
classifier/src/: decide.rs
crates/classifier-core/: Cargo.toml
crates/classifier-core/src/: filter.rs  lib.rs  pipeline.rs
dashboard/: index.html  package-lock.json  package.json
dashboard/src/: App.css  App.tsx  theme.ts  types.ts
dashboard/src-tauri/: Cargo.toml  tauri.conf.json
dashboard/src-tauri/src/: lib.rs  main.rs
dashboard/src/components/: BarChart24h.tsx  DonutChart.tsx  ExcelExportButton.tsx  Header.tsx  Icon.tsx  IncidentsTable.tsx  KpiCard.tsx  LiveFeed.tsx  PulseDot.tsx  RiskBadge.tsx  RiskFilter.tsx  Sidebar.tsx  Sparkline.tsx  StatesRawTable.tsx  StatesTable.tsx  WeekChart.tsx
dashboard/src/data/: hooks.ts  mock.ts  realtime.ts  source.ts
dashboard/src/pages/: FilteredEventsPage.tsx  OverviewPage.tsx  PlaceholderPage.tsx
notebooks/: V_NLI_aplicado_para_la_detección_de_contenido_NSFW_y_Armas.ipynb
tauri-plugin-native-browser-pane/: Cargo.toml  build.rs
tauri-plugin-native-browser-pane/android/src/main/java/: NativeBrowserPanePlugin.kt
tauri-plugin-native-browser-pane/ios/: Package.swift
tauri-plugin-native-browser-pane/ios/Sources/: NativeBrowserPanePlugin.swift
tauri-plugin-native-browser-pane/permissions/: default.toml
tauri-plugin-native-browser-pane/permissions/autogenerated/: reference.md
tauri-plugin-native-browser-pane/permissions/autogenerated/commands/: navigate.toml  set_bounds.toml
tauri-plugin-native-browser-pane/permissions/schemas/: schema.json
tauri-plugin-native-browser-pane/src/: ios_filter.rs  lib.rs
