[package]
name = "browser"
version = "0.1.0"
edition = "2024"

[dependencies]
playwright-rs = "0.12.0"
tokio = { version = "1", features = ["full"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
anyhow = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
directories = "5"
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
