[package]
name = "classifier-core"
version = "0.1.0"
edition = "2021"
description = "Zero-shot multi-hypothesis NLI classifier (shared core for app + plugin)"

[dependencies]
tokenizers = "0.20"
ndarray = "0.16"
aho-corasick = "1.1"
regex = "1.10"
deunicode = "1.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"

# Desktop: ort downloads onnxruntime via download-binaries.
[target.'cfg(not(any(target_os = "ios", target_os = "android")))'.dependencies]
ort = { version = "=2.0.0-rc.10", default-features = false, features = ["std", "ndarray", "download-binaries"] }

# iOS: ort-sys's own linking is disabled (alternative-backend feature).
# app/src-tauri/build.rs descarga el xcframework, hace lipo -thin, y emite los
# rustc-link-* directamente. La inicialización del runtime se hace en
# app/src-tauri/src/lib.rs llamando a ort::set_api() antes de cargar el modelo.
[target.'cfg(target_os = "ios")'.dependencies]
ort = { version = "=2.0.0-rc.10", default-features = false, features = ["std", "ndarray", "alternative-backend"] }

# Android: deja que ort-sys haga su propio linking via ORT_LIB_LOCATION env var.
[target.'cfg(target_os = "android")'.dependencies]
ort = { version = "=2.0.0-rc.10", default-features = false, features = ["std", "ndarray"] }
